# Medical_System_Manager

./: CMakeCache.txt  CMakeLists.txt  Makefile  OrdonnancementVisualisation.py  cmake_install.cmake  depreciated.c  explication instance.txt  implementation_une_algorithme_tri.txt  instance1.txt  instance2.txt  main_old.c  solution.txt
include/: TP3.h
lib/: libTP3_provided.dylib
src/: TP3.c  main  main.c
